# wavesurfer

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  wavesurfer.ipynb
.github/workflows/: black.yml  flake8.yml  isort.yml  release.yml
assets/: test_16k.TextGrid
templates/: wavesurfer.txt
wavesurfer/: __init__.py  alignment.py  player.py  timer.py  utils.py  wavesurfer.py
wavesurfer/configs/: player.json
wavesurfer/js/: pcm-player.js  plugins.js  wavesurfer.js
wavesurfer/templates/: wavesurfer.txt
